# Akira-Side-Scroller

./: CMakeLists.txt
src/: main.cpp
